# tracel-example

./: .gitignore  Cargo.toml  README.md  tracel.toml
.cargo/: config.toml
src/: data.rs  main.rs  model.rs  training.rs
