[package]
name = "burn-central-example"
edition = "2024"
version = "0.1.0"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "1b6dd60361115a0efb5b67c43cb75cd856b30498", features = [
    "train",
    "vision",
    "metrics",
    "std",
    "fusion",
    "flex",
    "autotune",
    "optim",
], default-features = false }
tracel = { git = "https://github.com/tracel-ai/burn-central", rev = "c677b98296bf045fc82470629c33bfe13781d247", package = "tracel" }

# Serialization
anyhow = "1.0.71"
log = "0.4.29"
rand = "0.9.2"
serde_json = "1"
serde = { version = "1.0.228", features = ["std", "derive"] }
ctrlc = "3.5.2"
tracing = "0.1.44"
dotenvy = "0.15"

[features]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
