[package]
name = "burn-central-example"
edition = "2024"
version = "0.1.0"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "35ff68bd3b2faa6b6f651e5d7ab5939b4504f799", features = [
    "train",
    "vision",
    "metrics",
    "std",
    "fusion",
    "flex",
    "autotune",
    "optim",
], default-features = false }
tracel = { path = "../sdk/crates/tracel", package = "tracel" }

# Serialization
anyhow = "1.0.71"
log = "0.4.29"
rand = "0.9.2"
serde_json = "1"
serde = { version = "1.0.228", features = ["std", "derive"] }
ctrlc = "3.5.2"
tracing = "0.1.44"
dotenvy = "0.15"

[features]
default = ["wgpu"]
flex = ["burn/flex"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
